--- a/programs/market-place/Cargo.toml
+++ b/programs/market-place/Cargo.toml
@@ -16,4 +16,6 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.28.0"
+mpl-token-metadata = { version = "3.0.1", features = [] }
+anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
+anchor-spl = { version = "0.28.0", features = [] }
